btrfs-progs: Convert man page for btrfs-dedup.
Although the btrfs-dedup function is not available in mainline kernel,
add the man page any way and add a warning into it.

Signed-off-by: Qu Wenruo <quwenruo@cn.fujitsu.com>
Signed-off-by: David Sterba <dsterba@suse.cz>

--- a/Documentation/Makefile
+++ b/Documentation/Makefile
@@ -30,6 +30,7 @@ MAN8_TXT += btrfs-qgroup.txt
 MAN8_TXT += btrfs-replace.txt
 MAN8_TXT += btrfs-restore.txt
 MAN8_TXT += btrfs-property.txt
+MAN8_TXT += btrfs-dedup.txt
 
 # Mount manpage
 MAN5_TXT += btrfs-mount.txt
